--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <header>Header content</header>
+    <section>
+        Main image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        Social links here
+    </footer>
 </body>
 
 </html>
