--- a/index.html
+++ b/index.html
@@ -12,12 +12,29 @@
 </head>
 
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign UP</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main image
     </section>
     <section>
-        Club Ethos
+        Club Ethos                                               
     </section>
     <section>
         Running locations, distances and times
