--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
+
     </section>
     <section>
-        Club Ethos                                               
+        Club Ethos
     </section>
     <section>
         Running locations, distances and times
