--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,11 @@
     <meta name="keywords" content="love running, running club, ireland, dublin">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 </head>
 
 <body>
@@ -25,7 +30,7 @@
                     <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">Sign UP</a>
+                    <a href="signup.html">Sign UP</a>
                 </li>
             </ul>
         </nav>
@@ -40,36 +45,36 @@
         <img src="assets/images/runner2.jpg" alt="Runners competing in marathon">
         <img src="assets/images/runner4.jpg" alt="Solo female runner jogging on a beach">
         <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
-        <img src="assets/images/mud-run.jpg" alt="Two women runners taking a muddy selfie after the Mud Runners Championship">        
+        <img src="assets/images/mud-run.jpg"
+            alt="Two women runners taking a muddy selfie after the Mud Runners Championship">
     </section>
 
-        <footer>
-            <ul class="social-networks">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i
-                            class="fa-brands fa-square-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://youtube.com" target="_blank" rel="noopener"
-                        aria-label="Visit our YouTube page (opens in a new tab)"><i
-                            class="fa-brands fa-square-youtube"></i></a>
-                </li>
-                <li>
-                    <a href="https://Instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
-                </li>
-            </ul>
-        </footer>
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://Instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 
-        <!-- font awesome script-->
-        <script src="https://kit.fontawesome.com/c2f4ffc429.js" crossorigin="anonymous"></script>
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/c2f4ffc429.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
