--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="keywords" content="love running, running club, ireland, dublin">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 </head>
 
 <body>
@@ -25,7 +30,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">Sign UP</a>
+                    <a href="signup.html">Sign UP</a>
                 </li>
             </ul>
         </nav>
